examples/Node.js-(Express/NestJS/Fastify/Koa)/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  type: ClusterIP
  selector:
    app: nodejs-app
  ports:
  - name: http
    port: 80
    targetPort: 3000
